--- a/frontend/src/app/layout/transfer/transfer.component.html
+++ b/frontend/src/app/layout/transfer/transfer.component.html
@@ -67,7 +67,7 @@
         <table mat-table [dataSource]="dataSource" matSort (matSortChange)="sortData($event)" matSortActive="id"
             matSortDirection="asc">
             <ng-container matColumnDef="transferId">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>Id</th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>ID#</th>
                 <td mat-cell *matCellDef="let element">
                     {{ element.transferId}}
                 </td>
