--- a/frontend/src/app/layout/transfer/transfer.component.html
+++ b/frontend/src/app/layout/transfer/transfer.component.html
@@ -69,7 +69,10 @@
             <ng-container matColumnDef="transferId">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>ID#</th>
                 <td mat-cell *matCellDef="let element">
-                    {{ element.transferId}}
+                    <b>
+                        {{ element.transferId}}
+
+                    </b>
                 </td>
             </ng-container>
             <ng-container matColumnDef="transferDate">
@@ -81,7 +84,7 @@
             <ng-container matColumnDef="description">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Description</th>
                 <td mat-cell *matCellDef="let element">
-                    {{ element.description }}
+                    {{ element.description | titlecase }}
                 </td>
             </ng-container>
             <ng-container matColumnDef="amount">
@@ -92,29 +95,12 @@
             </ng-container>
             <ng-container matColumnDef="fromUserName">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>From User</th>
-                <td mat-cell *matCellDef="let element">{{ element.fromUserName }}</td>
+                <td mat-cell *matCellDef="let element">{{ element.fromUserName | uppercase }}</td>
             </ng-container>
             <ng-container matColumnDef="toUserName">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>To User</th>
-                <td mat-cell *matCellDef="let element">{{ element.toUserName }}</td>
+                <td mat-cell *matCellDef="let element">{{ element.toUserName | uppercase  }}</td>
             </ng-container>
-
-            <ng-container matColumnDef="isApproved">
-                <th mat-header-cell *matHeaderCellDef>Approve</th>
-                <td mat-cell *matCellDef="let element">
-                    <ng-container *ngIf="element.isActive">
-                        <button *ngIf="!element.isApproved && !(element.fromUserId == loggedInUserId)" mat-icon-button
-                            matTooltip="Click here to approve" color="primary" type="button"
-                            (click)="onApproved(element.transferId)">
-                            <mat-icon aria-label="thumb_up">thumb_up</mat-icon>
-                        </button>
-                        <button *ngIf="element.isApproved" mat-icon-button class="green">
-                            <mat-icon>check</mat-icon>
-                        </button>
-                    </ng-container>
-                </td>
-            </ng-container>
-
             <ng-container matColumnDef="action">
                 <th mat-header-cell *matHeaderCellDef>Actions</th>
                 <td mat-cell *matCellDef="let element">
@@ -132,6 +118,22 @@
                     </ng-container>
                 </td>
             </ng-container>
+            <ng-container matColumnDef="isApproved">
+                <th mat-header-cell *matHeaderCellDef>Approve</th>
+                <td mat-cell *matCellDef="let element">
+                    <ng-container *ngIf="element.isActive">
+                        <button *ngIf="!element.isApproved && !(element.fromUserId == loggedInUserId)" mat-icon-button
+                            matTooltip="Click here to approve" color="primary" type="button"
+                            (click)="onApproved(element.transferId)">
+                            <mat-icon aria-label="thumb_up">thumb_up</mat-icon>
+                        </button>
+                        <button *ngIf="element.isApproved" mat-icon-button class="green">
+                            <mat-icon>check</mat-icon>
+                        </button>
+                    </ng-container>
+                </td>
+            </ng-container>
+
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let element; columns: displayedColumns"></tr>
         </table>
