--- a/frontend/src/app/layout/sales/sales.component.scss
+++ b/frontend/src/app/layout/sales/sales.component.scss
@@ -56,3 +56,9 @@ td {
     color: rgb(73 70 70 / 87%);
     font-size: 14px;
 }
+.red {
+    background-color: #f3e1e1;
+}
+.green{
+    background-color: #daf8da;
+}
