--- a/frontend/src/app/layout/customers/customers.component.html
+++ b/frontend/src/app/layout/customers/customers.component.html
@@ -48,7 +48,7 @@
                 <td mat-cell *matCellDef="let element">{{ element.payment | currency: 'INR' }}</td>
             </ng-container>
             <ng-container matColumnDef="due_limit">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>Due Limit</th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Total Due </th>
                 <td mat-cell *matCellDef="let element">{{ element.due_limit | currency: 'INR' }}</td>
             </ng-container>
             <ng-container matColumnDef="tier_code">
