--- a/frontend/src/app/layout/sales/sales.component.html
+++ b/frontend/src/app/layout/sales/sales.component.html
@@ -12,7 +12,7 @@
             <mat-form-field class="margin field-width">
                 <mat-label>Select Customer</mat-label>
                 <mat-select name="tier" [(ngModel)]="customerName">
-                    <mat-option  (click)="toggleCreateAddSalesButton()">All Company</mat-option>
+                    <mat-option value=""  (click)="toggleCreateAddSalesButton()">All Company</mat-option>
                     <mat-option *ngFor="let customer of customers" [value]="customer.company"
                         (click)="toggleCreateAddSalesButton(); customerData(customer); find(customer.id)">
                         {{customer.company | uppercase}}
@@ -112,9 +112,8 @@
             <ng-container matColumnDef="action">
                 <th mat-header-cell *matHeaderCellDef>Actions</th>
                 <td mat-cell *matCellDef="let element">
-                 <!-- {{element.date }}
-                    <br>{{date}} -->
-                    <ng-container *ngIf="loggedInUsersData.user_name === element.user_name && element.date  !==  date">
+
+                    <ng-container *ngIf="loggedInUsersData.user_name === element.user_name && (element.date | date: 'M/d/yy')  ===  (currentDate | date: 'M/d/yy')">
                          <button mat-icon-button matTooltip="Click to Edit" color="primary" type="button"
                              (click)="onEditNewCustomers(element)">
                              <mat-icon aria-label="Edit">edit</mat-icon>
