--- a/frontend/src/app/layout/sales/add-sales/add-sales.component.html
+++ b/frontend/src/app/layout/sales/add-sales/add-sales.component.html
@@ -1,5 +1,3 @@
-
-
 <div class="main-header">
     <h1 mat-dialog-title><b>Add Sales</b> </h1>
     <button mat-button mat-dialog-close>
@@ -8,16 +6,15 @@
 </div>
 <mat-divider></mat-divider>
 <br>
-<form [formGroup]="formGroup">
     <div class="item-form">
         <div class="box">
             <!--company start -->
             <div class="block">
 
-                    <mat-form-field>
-                        <mat-label>Company</mat-label>
-                        <input matInput formControlName="company" required [(ngModel)]="companyName"  />
-                    </mat-form-field>
+                <mat-form-field>
+                    <mat-label>Customer</mat-label>
+                    <input matInput  required [(ngModel)]="customerName"  value="{{customerName}}" style='text-transform:uppercase'/>
+                </mat-form-field>
 
 
             </div>
@@ -25,35 +22,9 @@
             <div class="block">
                 <mat-form-field>
                     <mat-label>Date</mat-label>
-                    <input matInput formControlName="date" required [(ngModel)]="currentDate"  />
+                    <input matInput  required [(ngModel)]="currentDate" />
                 </mat-form-field>
-                <div>
-                    <ng-container *ngIf="
-          formGroup.controls.date.touched &&
-          !formGroup.controls.date.value
-         ">
-                        <span class="error">date is Required</span>
-                    </ng-container>
-                </div>
             </div>
-
-
-            <!-- invoice no start -->
-            <div class="block">
-                <mat-form-field>
-                    <mat-label>Invoice No</mat-label>
-                    <input matInput formControlName="invoice_no" [(ngModel)]="invoice_no" type="number" required />
-                </mat-form-field>
-                <div>
-                    <ng-container *ngIf="
-                    formGroup.controls.invoice_no.touched &&
-                    !formGroup.controls.invoice_no.value
-                    ">
-                        <span class="error">Invoice No is Required</span>
-                    </ng-container>
-                </div>
-            </div>
-
 
             <!-- button start -->
             <div class="block">
@@ -69,7 +40,6 @@
         </div>
 
     </div>
-</form>
 <mat-divider class="mat-divider"></mat-divider>
 <br>
 <!-- supplier form -->
@@ -83,17 +53,16 @@
             <div class="block">
                 <mat-form-field class="input_width">
                     <mat-label>Item code</mat-label>
-                    <mat-select name="item code">
-                        <mat-option formControlName="item_code" *ngFor="let item of items" [value]="item.id"
-                            (click)="fillSellingPrice(item)">
+                    <mat-select name="item code" formControlName="item_id">
+                        <mat-option *ngFor="let item of items" [value]="item.id" (click)="fillSellingPrice(item)">
                             {{item.item_code | uppercase}}
                         </mat-option>
                     </mat-select>
                 </mat-form-field>
                 <div>
                     <ng-container *ngIf="
-                    formSupplier.controls.item_code.touched &&
-                    !formSupplier.controls.item_code.value
+                    formSupplier.controls.item_id.touched &&
+                    !formSupplier.controls.item_id.value
                     ">
                         <span class="error">Item Code is Required</span>
                     </ng-container>
@@ -161,8 +130,7 @@
                 </div>
             </div>
             <!-- ADD BUTTON -->
-            <button mat-raised-button color="primary" class="add_button" type="submit" [disabled]="!formSupplier.valid"
-                (click)="add()">
+            <button mat-raised-button color="primary" class="add_button" type="submit" [disabled]="!formSupplier.valid">
                 Add
             </button>
         </div>
@@ -170,7 +138,7 @@
 </form>
 <br>
 <div class="mat-elevation-z8">
-    <table mat-table [dataSource]="supplierDataSource" matSort matSortActive="item_code" matSortDirection="asc">
+    <table mat-table [dataSource]="salesItemDataSource" matSort matSortActive="item_code" matSortDirection="asc">
         <ng-container matColumnDef="item_code">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Item Name</th>
             <td mat-cell *matCellDef="let sales">
@@ -203,7 +171,7 @@
                     (click)="supplierFillForm(element.sales_id)">
                     <mat-icon aria-label="Edit">edit</mat-icon>
                 </button>
-                <button mat-icon-button matTooltip="Click to Delete" color="warn" (click)="confirmDialog(element.id)">
+                <button mat-icon-button matTooltip="Click to Delete" color="warn" (click)="removeItem(element.item_id)">
                     <mat-icon aria-label="Delete">delete</mat-icon>
                 </button>
             </td>
@@ -218,102 +186,110 @@
 <!-- bill container -->
 <div class="bill-container">
     <form [formGroup]="formBill" (ngSubmit)="onSubmit()">
-    <div class="flex totalAndBill">
-        <span class="totalAndBill_content-1">
-            <div class="width">
-                <mat-form-field>
-                    <mat-label>Total Qty</mat-label>
-                    <input matInput disable matTooltip="Not Editable" readonly value={{this.Qty}} />
-                </mat-form-field>
-            </div>
-            <div class="width">
-                <mat-form-field>
-                    <mat-label>Last Bill No</mat-label>
-                    <input matInput disable [(ngModel)]="lastBillNo" />
-                </mat-form-field>
-            </div>
-        </span>
-        <span class="totalAndBill_content-2">
-            <div class="width">
-                <mat-form-field>
-                    <mat-label>Total (₹)</mat-label>
-                    <input matInput disable matTooltip="Not Editable" readonly
-                        value="{{this.totalPrice  | currency: 'INR'}}" />
-                </mat-form-field>
-            </div>
-            <div class="width">
-                <mat-form-field>
-                    <mat-label>Last Bill Due (₹)</mat-label>
-                    <input matInput disable matTooltip="Not Editable" readonly
-                        value="{{this.lastBillDue  | currency: 'INR'}}" />
-                </mat-form-field>
-            </div>
-        </span>
-    </div>
-    <mat-divider></mat-divider>
-    <br>
-    <div class="flex remakesAndPayment">
-        <div class="remakes">
-            <textarea class="padding" id="" cols="60" rows="7" placeholder="Enter Remarks..."[(ngModel)]="remarks" formControlName="remarks"></textarea>
-        </div>
-        <div class="payment">
-            <div class="width">
-                <mat-form-field>
-                    <mat-label>Grand Total (₹) </mat-label>
-                    <input matInput disable matTooltip="Not Editable" readonly
-                        value="{{this.grandDueTotal  | currency: 'INR'}}" />
-                </mat-form-field>
-            </div>
-            <div class="width">
-                <span >
-
-                    <mat-checkbox color="primary"formControlName="pepperoni" > </mat-checkbox>
-                </span> &nbsp;
-                <mat-form-field>
-                    <mat-label>payment(₹) </mat-label>
-                    <input matInput disable (keyup)="totalDueCount()" formControlName="payment" [(ngModel)]="currentPayment"
-                        value={{this.currentPayment}} />
-                </mat-form-field>
-                <br>
-                <ng-container >
-
-                    <mat-form-field >
-                        <mat-label>Other Payment (₹) </mat-label>
-                        <input matInput disable (keyup)="totalDueCount()" [(ngModel)]="otherPayment"
-                        value={{this.otherPayment}} />
+        <div class="flex totalAndBill">
+            <span class="totalAndBill_content-1">
+                <div class="width">
+                    <mat-form-field>
+                        <mat-label>Total Qty</mat-label>
+                        <input matInput disable matTooltip="Not Editable" readonly value={{this.totalQty}} />
                     </mat-form-field>
-                </ng-container>
-            </div>
-        </div>
-    </div>
-    <mat-divider></mat-divider>
-    <div class="flex tierLimitAndButton">
-        <div><br><b>{{tier}}</b> Due Limit:
-            <span class="error">
-                {{this.dueLimit | currency: 'INR'}}
+                </div>
+                <!-- <div class="width">
+                    <mat-form-field>
+                        <mat-label>Last Bill No</mat-label>
+                        <input matInput disable [(ngModel)]="lastBillNo" />
+                    </mat-form-field>
+                </div> -->
+            </span>
+            <span class="totalAndBill_content-2">
+                <div class="width">
+                    <mat-form-field>
+                        <mat-label>Total (₹)</mat-label>
+                        <input matInput disable matTooltip="Not Editable" readonly
+                            value="{{this.totalPrice  | currency: 'INR'}}" />
+                    </mat-form-field>
+                </div>
+                <div class="width">
+                    <mat-form-field>
+                        <mat-label>Last Bill Due (₹)</mat-label>
+                        <input matInput disable matTooltip="Not Editable" readonly
+                            value="{{this.lastBillDue  | currency: 'INR'}}" />
+                    </mat-form-field>
+                </div>
             </span>
         </div>
-        <div class="tierLimitAndButton_content_2">
-            <div class="right">
+        <mat-divider></mat-divider>
+        <br>
+        <div class="flex remakesAndPayment">
+            <div class="remakes">
                 <mat-form-field>
-                    <mat-label>Total Due (₹) </mat-label>
-                    <input matInput disable matTooltip="Not Editable" readonly
-                        value="{{this.totalDue | currency: 'INR'}}" />
+                    <textarea matInput class="padding" id="" cdkAutosizeMinRows="8" cdkAutosizeMaxRows="8"
+                        placeholder="Enter Remarks..." formControlName="remarks"></textarea>
                 </mat-form-field>
+                <!-- <div>
+                <ng-container *ngIf="
+                formBill.controls.remarks.touched &&
+                !formBill.controls.remarks.value
+            ">
+                    <span class="error">Remarks is Required</span>
+                </ng-container>
+            </div> -->
             </div>
-            <br>
-            <div class="">
-                <button mat-raised-button color="primary"
-                   [disabled]="!formBill.valid || isShowLoader">
-                    <span *ngIf="!isShowLoader">
-                        Save & Rack
-                    </span>
-                    <mat-spinner *ngIf="isShowLoader"  diameter="20"></mat-spinner>
-                </button>
+            <div class="payment">
+                <div class="width">
+                    <mat-form-field>
+                        <mat-label>Grand Total (₹) </mat-label>
+                        <input matInput disable matTooltip="Not Editable" readonly
+                            value="{{this.grandDueTotal  | currency: 'INR'}}" />
+                    </mat-form-field>
+                </div>
+                <div class="width">
+                    <span>
+
+                        <mat-checkbox color="primary" formControlName="pepperoni"> </mat-checkbox>
+                    </span> &nbsp;
+                    <mat-form-field>
+                        <mat-label>payment(₹) </mat-label>
+                        <input matInput disable (keyup)="totalDueCount()" formControlName="payment"
+                            [(ngModel)]="currentPayment" value={{this.currentPayment}} />
+                    </mat-form-field>
+                    <br>
+                    <ng-container>
+
+                        <mat-form-field>
+                            <mat-label>Other Payment (₹) </mat-label>
+                            <input matInput disable (keyup)="totalDueCount()" [(ngModel)]="otherPayment"
+                                value={{this.otherPayment}} />
+                        </mat-form-field>
+                    </ng-container>
+                </div>
             </div>
         </div>
-    </div>
-</form>
+        <mat-divider></mat-divider>
+        <div class="flex tierLimitAndButton">
+            <div><br><b>{{tier | uppercase}}</b> Due Limit:
+                <span class="error">
+                    {{this.dueLimit | currency: 'INR'}}
+                </span>
+            </div>
+            <div class="tierLimitAndButton_content_2">
+                <div class="right">
+                    <mat-form-field>
+                        <mat-label>Total Due (₹) </mat-label>
+                        <input matInput disable matTooltip="Not Editable" readonly
+                            value="{{this.totalDue | currency: 'INR'}}" />
+                    </mat-form-field>
+                </div>
+                <br>
+                <div class="">
+                    <button mat-raised-button color="primary" [disabled]="!formBill.valid || isShowLoader">
+                        <span *ngIf="!isShowLoader">
+                            Save & Rack
+                        </span>
+                        <mat-spinner *ngIf="isShowLoader" diameter="20"></mat-spinner>
+                    </button>
+                </div>
+            </div>
+        </div>
+    </form>
 </div>
-
-
