--- a/frontend/src/app/layout/sales/sales.component.html
+++ b/frontend/src/app/layout/sales/sales.component.html
@@ -12,7 +12,7 @@
             <mat-form-field class="margin field-width">
                 <mat-label>Select Customer</mat-label>
                 <mat-select name="tier" [(ngModel)]="customerName">
-                    <mat-option value=""  (click)="toggleCreateAddSalesButton()">All Company</mat-option>
+                    <mat-option value=""  (click)="toggleCreateAddSalesButton()">All Customer</mat-option>
                     <mat-option *ngFor="let customer of customers" [value]="customer.company"
                         (click)="toggleCreateAddSalesButton(); customerData(customer); find(customer.id)">
                         {{customer.company | uppercase}}
