--- a/frontend/src/app/layout/sales/add-sales/add-sales.component.html
+++ b/frontend/src/app/layout/sales/add-sales/add-sales.component.html
@@ -6,40 +6,36 @@
 </div>
 <mat-divider></mat-divider>
 <br>
-    <div class="item-form">
-        <div class="box">
-            <!--company start -->
-            <div class="block">
-
-                <mat-form-field>
-                    <mat-label>Customer</mat-label>
-                    <input matInput  required [(ngModel)]="customerName"  value="{{customerName}}" style='text-transform:uppercase'/>
-                </mat-form-field>
-
-
-            </div>
-            <!--date start -->
-            <div class="block">
-                <mat-form-field>
-                    <mat-label>Date</mat-label>
-                    <input matInput  required [(ngModel)]="currentDate" />
-                </mat-form-field>
-            </div>
-
-            <!-- button start -->
-            <div class="block">
-                <button mat-raised-button color="primary" class="margin">
-                    Download
-                </button>
-            </div>
-            <div class="block">
-                <button mat-raised-button color="primary">
-                    Upload
-                </button>
-            </div>
+<div class="item-form">
+    <div class="box">
+        <!--company start -->
+        <div class="block">
+            <mat-form-field>
+                <mat-label>Customer</mat-label>
+                <input matInput required [(ngModel)]="customerName" readonly
+                    style='text-transform:uppercase' />
+            </mat-form-field>
         </div>
-
+        <!--date start -->
+        <div class="block">
+            <mat-form-field>
+                <mat-label>Date</mat-label>
+                <input matInput required [(ngModel)]="currentDate" readonly />
+            </mat-form-field>
+        </div>
+        <!-- button start -->
+        <div class="block">
+            <button mat-raised-button color="primary" class="margin">
+                Download
+            </button>
+        </div>
+        <div class="block">
+            <button mat-raised-button color="primary">
+                Upload
+            </button>
+        </div>
     </div>
+</div>
 <mat-divider class="mat-divider"></mat-divider>
 <br>
 <!-- supplier form -->
@@ -48,8 +44,6 @@
     <div class="sales_details_table">
         <div class="box">
             <!-- Item Code start -->
-
-
             <div class="block">
                 <mat-form-field class="input_width">
                     <mat-label>Item code</mat-label>
@@ -155,7 +149,6 @@
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Rate</th>
             <td mat-cell *matCellDef="let sales">
                 {{ sales.selling_price | currency: 'INR' }}
-
             </td>
         </ng-container>
         <ng-container matColumnDef="total">
@@ -171,7 +164,7 @@
                     (click)="supplierFillForm(element.sales_id)">
                     <mat-icon aria-label="Edit">edit</mat-icon>
                 </button>
-                <button mat-icon-button matTooltip="Click to Delete" color="warn" (click)="removeItem(element.item_id)">
+                <button mat-icon-button matTooltip="Click to Delete" color="warn" (click)="removeItem(+element.item_id)">
                     <mat-icon aria-label="Delete">delete</mat-icon>
                 </button>
             </td>
@@ -194,12 +187,12 @@
                         <input matInput disable matTooltip="Not Editable" readonly value={{this.totalQty}} />
                     </mat-form-field>
                 </div>
-                <!-- <div class="width">
+                <div class="width">
                     <mat-form-field>
                         <mat-label>Last Bill No</mat-label>
                         <input matInput disable [(ngModel)]="lastBillNo" />
                     </mat-form-field>
-                </div> -->
+                </div>
             </span>
             <span class="totalAndBill_content-2">
                 <div class="width">
@@ -244,18 +237,19 @@
                     </mat-form-field>
                 </div>
                 <div class="width">
-                    <span>
-
-                        <mat-checkbox color="primary" formControlName="pepperoni"> </mat-checkbox>
-                    </span> &nbsp;
-                    <mat-form-field>
-                        <mat-label>payment(₹) </mat-label>
-                        <input matInput disable (keyup)="totalDueCount()" formControlName="payment"
-                            [(ngModel)]="currentPayment" value={{this.currentPayment}} />
-                    </mat-form-field>
+                    <div class="flex">
+                        <div>
+                            <mat-checkbox color="primary" formControlName="pepperoni"> </mat-checkbox>
+                        </div>
+                        &nbsp;
+                        <mat-form-field>
+                            <mat-label>payment(₹) </mat-label>
+                            <input matInput disable (keyup)="totalDueCount()" formControlName="payment"
+                                [(ngModel)]="currentPayment" value={{this.currentPayment}} />
+                        </mat-form-field>
+                    </div>
                     <br>
                     <ng-container>
-
                         <mat-form-field>
                             <mat-label>Other Payment (₹) </mat-label>
                             <input matInput disable (keyup)="totalDueCount()" [(ngModel)]="otherPayment"
