--- a/frontend/src/app/layout/sales/add-sales/add-sales.component.scss
+++ b/frontend/src/app/layout/sales/add-sales/add-sales.component.scss
@@ -97,6 +97,9 @@ table {
 .margin {
     margin-right: 10px;
 }
+.float{
+    float: right;
+}
 .loader {
     bottom: 53px;
     float: right;
@@ -104,4 +107,9 @@ table {
 }
 mat-spinner{
     margin: 7px;
+}
+
+.checkbox-margin{
+    margin-top: 23px;
+    margin-right: 14px;
 }
