--- a/frontend/src/app/layout/sales/add-sales/add-sales.component.html
+++ b/frontend/src/app/layout/sales/add-sales/add-sales.component.html
@@ -12,8 +12,7 @@
         <div class="block">
             <mat-form-field>
                 <mat-label>Customer</mat-label>
-                <input matInput required [(ngModel)]="customerName" readonly
-                    style='text-transform:uppercase' />
+                <input matInput required [(ngModel)]="customerName" readonly style='text-transform:uppercase' />
             </mat-form-field>
         </div>
         <!--date start -->
@@ -53,7 +52,7 @@
                         </mat-option>
                     </mat-select>
                 </mat-form-field>
-                               <mat-spinner class="loader" *ngIf="selectItemLoader" diameter="20"></mat-spinner>
+                <mat-spinner class="loader" *ngIf="selectItemLoader" diameter="20"></mat-spinner>
             </div>
             <!-- qty start -->
             <div class="block">
@@ -61,7 +60,7 @@
                     <mat-label>Qty.</mat-label>
                     <input matInput formControlName="qty" type="number" (keyup)="count()" (click)="count()" required />
                 </mat-form-field>
-                           </div>
+            </div>
             <!-- available start -->
             <div class="block">
                 <mat-form-field class="input_width">
@@ -148,7 +147,8 @@
                     (click)="supplierFillForm(element.sales_id)">
                     <mat-icon aria-label="Edit">edit</mat-icon>
                 </button>
-                <button mat-icon-button matTooltip="Click to Delete" color="warn" (click)="removeItem(+element.item_id)">
+                <button mat-icon-button matTooltip="Click to Delete" color="warn"
+                    (click)="removeItem(+element.item_id)">
                     <mat-icon aria-label="Delete">delete</mat-icon>
                 </button>
             </td>
@@ -201,7 +201,7 @@
             <div class="remakes">
                 <mat-form-field>
                     <textarea matInput class="padding" id="" cdkAutosizeMinRows="8" cdkAutosizeMaxRows="8"
-                        placeholder="Enter Remarks..." [(ngModel)]="remarks" formControlName="remarks"></textarea>
+                        placeholder="Enter Remarks..." formControlName="remarks"></textarea>
                 </mat-form-field>
                 <!-- <div>
                 <ng-container *ngIf="
@@ -213,37 +213,43 @@
             </div> -->
             </div>
             <div class="payment">
-                <div class="width">
+                <div class="float">
                     <mat-form-field>
                         <mat-label>Grand Total (₹) </mat-label>
                         <input matInput disable matTooltip="Not Editable" readonly
                             value="{{this.grandDueTotal  | currency: 'INR'}}" />
                     </mat-form-field>
                 </div>
+                <br>
+                <br>
+                <br>
                 <div class="width">
                     <div class="flex">
-                        <div>
-                            <mat-checkbox color="primary" formControlName="pepperoni"> </mat-checkbox>
-                        </div>
-                        &nbsp;
-                        <mat-form-field>
-                            <mat-label>payment(₹) </mat-label>
-                            <input matInput disable (keyup)="totalDueCount()" formControlName="payment"
-                                [(ngModel)]="currentPayment" value={{this.currentPayment}} />
-                        </mat-form-field>
+                        <span>
+                            <section class="checkbox-margin">
+                                <mat-checkbox color="primary" (change)="hideShowOther()"> </mat-checkbox>
+                            </section>
+                        </span>
+                        <span>
+                            <mat-form-field>
+                                <mat-label>payment(₹) </mat-label>
+                                <input matInput disable (keyup)="totalDueCount()" formControlName="payment" />
+                            </mat-form-field>
+                        </span>
                     </div>
-                    <br>
-                    <ng-container>
-                        <mat-form-field>
-                            <mat-label>Other Payment (₹) </mat-label>
-                            <input matInput disable (keyup)="totalDueCount()" [(ngModel)]="otherPayment"
-                                value={{this.otherPayment}} />
-                        </mat-form-field>
-                    </ng-container>
+                    <div class="float">
+                        <ng-container *ngIf="isShowOtherPayment">
+                            <mat-form-field>
+                                <mat-label>Other Payment (₹) </mat-label>
+                                <input matInput disable (keyup)="totalDueCount()" value={{this.otherPayment}} />
+                            </mat-form-field>
+                        </ng-container>
+                    </div>
                 </div>
             </div>
         </div>
         <mat-divider></mat-divider>
+        <br>
         <div class="flex tierLimitAndButton">
             <div><br><b>{{tier | uppercase}}</b> Due Limit:
                 <span class="error">
