--- a/frontend/src/app/layout/customers/customers.component.html
+++ b/frontend/src/app/layout/customers/customers.component.html
@@ -49,7 +49,7 @@
             </ng-container>
             <ng-container matColumnDef="due_limit">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Total Due </th>
-                <td mat-cell *matCellDef="let element">{{ element.total_due | currency: 'INR' }}</td>
+                <td mat-cell *matCellDef="let element">{{ element.cdf_total_due | currency: 'INR' }}</td>
             </ng-container>
             <ng-container matColumnDef="tier_code">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Tier</th>
