--- a/frontend/src/app/layout/sales/add-sales/add-sales.component.html
+++ b/frontend/src/app/layout/sales/add-sales/add-sales.component.html
@@ -58,7 +58,7 @@
             <div class="block">
                 <mat-form-field class="input_width">
                     <mat-label>Qty.</mat-label>
-                    <input matInput formControlName="qty" type="number" (keyup)="count()" (click)="count()" required />
+                    <input matInput formControlName="qty" type="number" (keyup)="count()" (click)="count()" />
                 </mat-form-field>
             </div>
             <!-- available start -->
@@ -67,14 +67,7 @@
                     <mat-label>Available</mat-label>
                     <input matInput formControlName="available" matTooltip="Not Editable" readonly />
                 </mat-form-field>
-                <div>
-                    <ng-container *ngIf="
-                formSupplier.controls.available.touched &&
-                !formSupplier.controls.available.value
-                ">
-                        <span class="error">Available is Required</span>
-                    </ng-container>
-                </div>
+
             </div>
             <!-- selling_price start -->
             <div class="block">
@@ -82,14 +75,7 @@
                     <mat-label>Selling Price</mat-label>
                     <input matInput formControlName="selling_price" matTooltip="Not Editable" readonly />
                 </mat-form-field>
-                <div>
-                    <ng-container *ngIf="
-                formSupplier.controls.selling_price.touched &&
-                !formSupplier.controls.selling_price.value
-                ">
-                        <span class="error">Selling Price is Required</span>
-                    </ng-container>
-                </div>
+
             </div>
             <!-- total start -->
             <div class="block">
@@ -97,17 +83,10 @@
                     <mat-label>Total</mat-label>
                     <input matInput formControlName="total" matTooltip="Not Editable" readonly />
                 </mat-form-field>
-                <div>
-                    <ng-container *ngIf="
-                formSupplier.controls.total.touched &&
-                !formSupplier.controls.total.value
-                ">
-                        <span class="error">Total Price is Required</span>
-                    </ng-container>
-                </div>
+
             </div>
             <!-- ADD BUTTON -->
-            <button mat-raised-button color="primary" class="add_button" type="submit" [disabled]="!formSupplier.valid">
+            <button mat-raised-button color="primary" class="add_button" type="submit" [disabled]="!this.formSupplier.value.item_id|| !this.formSupplier.value.qty ||this.formSupplier.value.item_id === '' || this.formSupplier.value.qty === '' ">
                 Add
             </button>
         </div>
@@ -144,7 +123,7 @@
             <th mat-header-cell *matHeaderCellDef>Actions</th>
             <td mat-cell *matCellDef="let element">
                 <button mat-icon-button matTooltip="Click to Edit" color="primary" type="button"
-                    (click)="supplierFillForm(element.sales_id)">
+                    (click)="supplierFillForm(element)">
                     <mat-icon aria-label="Edit">edit</mat-icon>
                 </button>
                 <button mat-icon-button matTooltip="Click to Delete" color="warn"
@@ -241,7 +220,7 @@
                         <ng-container *ngIf="isShowOtherPayment">
                             <mat-form-field>
                                 <mat-label>Other Payment (₹) </mat-label>
-                                <input matInput disable (keyup)="totalDueCount()" value={{this.otherPayment}} />
+                                <input matInput disable (keyup)="totalDueCount()" formControlName="otherPayment"/>
                             </mat-form-field>
                         </ng-container>
                     </div>
