--- a/frontend/src/app/layout/sales/sales.component.html
+++ b/frontend/src/app/layout/sales/sales.component.html
@@ -11,7 +11,7 @@
             </button>
             <mat-form-field class="margin field-width">
                 <mat-label>Select Customer</mat-label>
-                <mat-select name="tier" [(ngModel)]="customerId" (selectionChange)="toggleCreateAddSalesButton();">
+                <mat-select name="customer" [(ngModel)]="selectedCustomerId" (selectionChange)="toggleCreateAddSalesButton();">
                     <mat-option>All Customer</mat-option>
                     <mat-option *ngFor="let customer of customers" [value]="customer.id">
                         {{customer.company | uppercase}}
@@ -23,7 +23,7 @@
                 <mat-icon class="icon">cloud_download</mat-icon>
                 Download
             </button>
-            <button color="primary" class="margin" mat-raised-button *ngIf="isShow" (click)="onAddNewSales()">
+            <button color="primary" class="margin" mat-raised-button *ngIf="isShowAddSales" (click)="onAddNewSales()">
                 Add New Sales
             </button>
         </div>
@@ -34,8 +34,8 @@
     </div>
     <br />
     <div class="mat-elevation-z8">
-        <table mat-table [dataSource]="dataSource" matSort (matSortChange)="sortData($event)" matSortActive="company"
-            matSortDirection="asc">
+        <table mat-table [dataSource]="dataSource" matSort (matSortChange)="sortData($event)" matSortActive="id"
+            matSortDirection="desc">
 
             <ng-container matColumnDef="id">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>No</th>
@@ -86,20 +86,22 @@
 
             <ng-container matColumnDef="payment">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Payment</th>
-                <td mat-cell *matCellDef="let element">{{ element.payment ? (element.payment | currency: 'INR') :
-                    0 | currency: 'INR'}}</td>
+                <td mat-cell *matCellDef="let element">
+                    {{element?.payment| currency: 'INR' }}
+                </td>
             </ng-container>
 
 
             <ng-container matColumnDef="total_due">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>TD</th>
-                <td mat-cell *matCellDef="let element">{{   element.total_due | currency: 'INR'}}</td>
+                <td mat-cell *matCellDef="let element">{{ element?.total_due | currency: 'INR'}}</td>
             </ng-container>
 
             <ng-container matColumnDef="other_payment">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>OP</th>
-                <td mat-cell *matCellDef="let element">{{ element.other_payment ? (element.other_payment | currency:
-                    'INR' ) : 0 | currency: 'INR' }}</td>
+                <td mat-cell *matCellDef="let element">
+                    {{element?.other_payment| currency: 'INR' }}
+                </td>
             </ng-container>
 
             <ng-container matColumnDef="user_name">
@@ -111,31 +113,29 @@
             <ng-container matColumnDef="action">
                 <th mat-header-cell *matHeaderCellDef>Actions</th>
                 <td mat-cell *matCellDef="let element">
+                    <ng-container
+                        *ngIf="loggedInUsersData.user_name === element.user_name && (element.date | date: 'M/d/yy')  ===  (currentDate | date: 'M/d/yy')">
+                        <button mat-icon-button matTooltip="Click to Edit" color="primary" type="button"
+                            (click)="onEditNewSales(element)">
+                            <mat-icon aria-label="Edit">edit</mat-icon>
+                        </button>
+                        <button mat-icon-button
+                            [matTooltip]="tableParams.active? 'Click to de-active': 'Click to Active'"
+                            [color]="tableParams.active? 'warn': 'primary'" (click)="changeStatus(element.id)">
+                            <mat-icon aria-label="Delete">{{tableParams.active? 'visibility_off': 'visibility'}}
+                            </mat-icon>
+                        </button>
+                    </ng-container>
 
-                    <ng-container *ngIf="loggedInUsersData.user_name === element.user_name && (element.date | date: 'M/d/yy')  ===  (currentDate | date: 'M/d/yy')">
-                         <button mat-icon-button matTooltip="Click to Edit" color="primary" type="button"
-                             (click)="onEditNewSales(element)">
-                             <mat-icon aria-label="Edit">edit</mat-icon>
-                         </button>
-                         <button mat-icon-button matTooltip="{{tableParams.active? 'Click to de-active': 'Click to Active'}}"
-                         color="{{tableParams.active? 'warn': 'primary'}}" (click)="changeStatus(element.id)">
-                         <mat-icon aria-label="Delete">{{tableParams.active? 'visibility_off': 'visibility'}}</mat-icon>
-                         </button>
-                   </ng-container>
-
-                <ng-container *ngIf="element.qty < 0  && loggedInUsersData.role !== 'Employees' && loggedInUsersData.user_name !== element.user_name ">
-
-                    <button mat-icon-button matTooltip="Click to thumb" color="primary" type="button"
-                        (click)="onEditNewCustomers(element)">
-                        <mat-icon aria-label="like">thumb_up</mat-icon>
-                    </button>
-                </ng-container>
-
-
+                    <ng-container
+                        *ngIf="element.qty < 0  && loggedInUsersData.role !== 'Employees' && loggedInUsersData.user_name !== element.user_name ">
+                        <button mat-icon-button matTooltip="Click to thumb" color="primary" type="button"
+                            (click)="onEditNewCustomers(element)">
+                            <mat-icon aria-label="like">thumb_up</mat-icon>
+                        </button>
+                    </ng-container>
                 </td>
             </ng-container>
-
-
 
             <ng-container matColumnDef="print">
                 <th mat-header-cell *matHeaderCellDef>Print</th>
@@ -144,13 +144,13 @@
                         (click)="print(element)">
                         <mat-icon aria-label="print" color="primary">print</mat-icon>
                     </button>
-
                 </td>
             </ng-container>
 
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let element; columns: displayedColumns" [class]="element.qty < 0  ? 'red'
-                : 'white'"></tr>
+            <tr mat-row *matRowDef="let element; columns: displayedColumns"
+                [class]="element.qty < 0  ? 'red' : 'white'">
+            </tr>
         </table>
 
         <mat-paginator #paginator [pageSizeOptions]="pageSizeOptions" [pageSize]="defaultPageSize" showFirstLastButtons
