--- a/frontend/src/app/layout/purchase/add-purchase/add-purchase.component.scss
+++ b/frontend/src/app/layout/purchase/add-purchase/add-purchase.component.scss
@@ -112,3 +112,10 @@ table {
 mat-spinner {
     margin: 7px;
 }
+.checkbox-margin{
+    margin-top: 23px;
+    margin-right: 14px;
+}
+.float{
+    float: right;
+}
