--- a/frontend/src/app/layout/purchase/add-purchase/add-purchase.component.html
+++ b/frontend/src/app/layout/purchase/add-purchase/add-purchase.component.html
@@ -1,5 +1,5 @@
 <div class="main-header">
-    <h1 mat-dialog-title><b> {{ !this.data.id ? 'Add Purchase' : 'Update Purchase' }}</b> </h1>
+    <h1 mat-dialog-title><b> {{ !this.data.purchaseId ? 'Add Purchase' : 'Update Purchase' }}</b> </h1>
     <button mat-button mat-dialog-close>
         <mat-icon>close</mat-icon>
     </button>
@@ -21,12 +21,7 @@
                     <input matInput formControlName="date" [(ngModel)]="currentDate" value={{currentDate}} required>
                 </mat-form-field>
             </div>
-            <div class="block">
-                <mat-form-field>
-                    <mat-label>Invoice No</mat-label>
-                    <input matInput required value={{invoice_no}}>
-                </mat-form-field>
-            </div>
+
             <div class="block">
                 <button mat-raised-button color="primary" class="margin">
                     Download
@@ -44,7 +39,7 @@
 <br>
 <!-- supplier form -->
 <h1 mat-dialog-title>Purchase Details</h1>
-<form [formGroup]="formSupplier" (ngSubmit)="addAndEditPurchaseDetails()">
+<form [formGroup]="formSupplier" (ngSubmit)="addSalesQuotation()">
     <div class="sales_details_table">
         <div class="box">
             <div class="block">
@@ -52,7 +47,7 @@
                     <mat-label>Item code</mat-label>
                     <mat-select name="item code">
                         <mat-option formControlName="item_code" *ngFor="let item of items" [value]="item.id"
-                            (click)="fillSellingPrice(item)">
+                            (click)="fillSellingPrice(item.id)">
                             {{item.item_code | uppercase}}
                         </mat-option>
                     </mat-select>
@@ -65,7 +60,7 @@
             <div class="block">
                 <mat-form-field class="input_width">
                     <mat-label>Qty.</mat-label>
-                    <input matInput formControlName="qty"  (keyup)="count()" (click)="count()"  />
+                    <input matInput formControlName="qty" type="number"  />
                 </mat-form-field>
 
             </div>
@@ -73,7 +68,7 @@
             <div class="block">
                 <mat-form-field class="input_width">
                     <mat-label>Available</mat-label>
-                    <input matInput formControlName="available" matTooltip="Not Editable" readonly />
+                    <input matInput  matTooltip="Not Editable" readonly   [value]="availableItemById"/>
                 </mat-form-field>
 
             </div>
@@ -89,14 +84,13 @@
             <div class="block">
                 <mat-form-field class="input_width">
                     <mat-label>Total</mat-label>
-                    <input matInput matTooltip="Not Editable" formControlName="total" readonly />
+                    <input matInput matTooltip="Not Editable" formControlName="total" readonly [value]="getItemWiseTotal()" />
                 </mat-form-field>
 
             </div>
             <!-- ADD BUTTON -->
-            <button mat-raised-button color="primary" class="add_button" type="submit" (click)="add()">
-
-                {{ !showEditButton ? 'Add' : 'Update'}}
+            <button mat-raised-button color="primary" class="add_button" type="submit"  [disabled]="!this.formSupplier.value.item_id|| !this.formSupplier.value.qty ||this.formSupplier.value.item_id === '' || this.formSupplier.value.qty === '' ">
+                {{isEditSalesItem? 'Update': 'Add'}}
 
             </button>
         </div>
@@ -104,7 +98,7 @@
 </form>
 <br>
 <div class="mat-elevation-z8">
-    <table mat-table [dataSource]="supplierDataSource" matSort matSortActive="item_code" matSortDirection="asc">
+    <table mat-table [dataSource]="purchaseItemDataSource" matSort matSortActive="item_code" matSortDirection="asc">
         <ng-container matColumnDef="item_code">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Item Name</th>
             <td mat-cell *matCellDef="let sales">
@@ -127,14 +121,14 @@
         <ng-container matColumnDef="total">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Total</th>
             <td mat-cell *matCellDef="let sales">
-                {{ sales.total | currency: 'INR'}}
+                {{ sales.qty *  sales.selling_price | currency: 'INR'}}
             </td>
         </ng-container>
         <ng-container matColumnDef="action">
             <th mat-header-cell *matHeaderCellDef>Actions</th>
             <td mat-cell *matCellDef="let element">
                 <button mat-icon-button matTooltip="Click to Edit" color="primary" type="button"
-                    (click)="supplierFillForm(element)">
+                    (click)="supplierFillForm(element.item_id)">
                     <mat-icon aria-label="Edit">edit</mat-icon>
                 </button>
                 <button mat-icon-button matTooltip="Click to Delete" color="warn" (click)="removePurchaseDetails(element)">
@@ -157,13 +151,13 @@
             <div class="width">
                 <mat-form-field>
                     <mat-label>Total Qty</mat-label>
-                    <input matInput disable matTooltip="Not Editable"  value={{this.Qty}} />
+                    <input matInput disable matTooltip="Not Editable" [value]="totalQty" />
                 </mat-form-field>
             </div>
             <div class="width">
                 <mat-form-field>
                     <mat-label>Last Bill No</mat-label>
-                    <input matInput disable [(ngModel)]="lastBillNo" />
+                    <input matInput disable [(ngModel)]="lastBillNo"  [value]="this.lastBillNo" />
                 </mat-form-field>
             </div>
         </span>
@@ -172,7 +166,7 @@
                 <mat-form-field>
                     <mat-label>Total (₹)</mat-label>
                     <input matInput disable matTooltip="Not Editable"
-                        value="{{this.totalPrice  | currency: 'INR'}}" />
+                    [value]="total | currency: 'INR'" />
                 </mat-form-field>
             </div>
             <div class="width">
@@ -201,21 +195,30 @@
                 </mat-form-field>
             </div>
             <div class="width">
+                <div class="flex">
+                    <span>
+                        <section class="checkbox-margin">
+                            <mat-checkbox color="primary" (change)="hideShowOther()" [checked]="isShowOtherPayment"> </mat-checkbox>
+                        </section>
+                    </span>
+                    <span>
+                        <mat-form-field>
+                            <mat-label>payment(₹) </mat-label>
+                            <input matInput disable (keyup)="calculate()" formControlName="payment" />
+                        </mat-form-field>
+                    </span>
+                </div>
+                <div class="float">
+                    <ng-container *ngIf="isShowOtherPayment">
+                        <mat-form-field>
+                            <mat-label>Other Payment (₹) </mat-label>
+                            <input matInput disable formControlName="otherPayment"/>
+                        </mat-form-field>
+                    </ng-container>
+                </div>
 
-                <mat-form-field>
-                    <mat-label>payment(₹) </mat-label>
-                    <input matInput disable (keyup)="totalPaymentToDueCount()" [(ngModel)]="currentPayment"
-                   />
-                </mat-form-field>
-                <br>
-                <ng-container>
 
-                    <mat-form-field>
-                        <mat-label>Other Payment (₹) </mat-label>
-                        <input matInput disable (keyup)="totalOtherToDueCount()" [(ngModel)]="otherPayment"
-                             />
-                    </mat-form-field>
-                </ng-container>
+
             </div>
         </div>
     </div>
@@ -239,7 +242,7 @@
             <div class="">
                 <button mat-raised-button color="primary" (click)="savePurchase()">
                     <span *ngIf="!isShowLoader">
-                        {{ !this.data.id ? 'Save & Back' : 'Update & Back' }}
+                        {{ !this.data.purchaseId ? 'Save & Back' : 'Update & Back' }}
                     </span>
                     <mat-spinner *ngIf="isShowLoader" diameter="20"></mat-spinner>
                 </button>
