--- a/frontend/src/app/layout/purchase/purchase.component.html
+++ b/frontend/src/app/layout/purchase/purchase.component.html
@@ -16,8 +16,8 @@
             <!-- All supplier -->
             <mat-form-field class="margin field-width">
                 <mat-label>All Suppliers</mat-label>
-                <mat-select name="tier" [(ngModel)]="supplierName">
-                    <mat-option value="" (click)="toggleCreateAddPurchaseButton()">All suppliers</mat-option>
+                <mat-select name="tier" [(ngModel)]="selectSupplierId" (selectionChange)="toggleCreateAddPurchaseButton()">
+                    <mat-option >All suppliers</mat-option>
                     <mat-option *ngFor="let supplier of suppliers" [value]="supplier.company"
                         (click)="toggleCreateAddPurchaseButton(); customerData(supplier); find(supplier.id)">
                         {{supplier.company | uppercase}}
@@ -48,7 +48,7 @@
                 <mat-icon class="icon">cloud_download</mat-icon>
                 Download
             </button>
-            <button color="primary" class="margin btn" mat-raised-button *ngIf="!isShow" (click)="onAddNewPurchase()">
+            <button color="primary" class="margin btn" mat-raised-button *ngIf="!isShowAddPurchase" (click)="onAddNewPurchase()">
                 Add New Purchase
             </button>
         </div>
@@ -120,14 +120,17 @@
             <ng-container matColumnDef="action">
                 <th mat-header-cell *matHeaderCellDef>Actions</th>
                 <td mat-cell *matCellDef="let element">
+                    <ng-container
+                    *ngIf="loggedInUsersData.user_name === element.user_name && (element.date | date: 'M/d/yy')  ===  (currentDate | date: 'M/d/yy')">
                     <button mat-icon-button matTooltip="Click to Edit" color="primary" type="button"
                         (click)="onEditNewCustomers(element)">
                         <mat-icon aria-label="Edit">edit</mat-icon>
                     </button>
-                    <button mat-icon-button matTooltip="{{tableParams.active? 'Click to de-active': 'Click to Active'}}"
-                    color="{{tableParams.active? 'warn': 'primary'}}" (click)="changeStatus(element.id)">
+                    <button mat-icon-button [matTooltip]="tableParams.active? 'Click to de-active': 'Click to Active'"
+                    [color]="tableParams.active? 'warn': 'primary'" (click)="changeStatus(element.id)">
                     <mat-icon aria-label="Delete">{{tableParams.active? 'visibility_off': 'visibility'}}</mat-icon>
                 </button>
+            </ng-container>
                 </td>
             </ng-container>
             <ng-container matColumnDef="print">
