--- a/frontend/src/app/layout/purchase/add-purchase/add-purchase.component.html
+++ b/frontend/src/app/layout/purchase/add-purchase/add-purchase.component.html
@@ -173,7 +173,7 @@
                 <mat-form-field>
                     <mat-label>Last Bill Due (₹)</mat-label>
                     <input matInput disable matTooltip="Not Editable"
-                        value="{{this.lastBillDue  | currency: 'INR'}}" />
+                        [value]="this.lastBillDue  | currency: 'INR'" />
                 </mat-form-field>
             </div>
         </span>
